Spacing fix

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -104,7 +104,7 @@ button {
 
 .green {
   display: inline;
-  width: 25%;
-  margin: 10%;
+  width: 15%;
+  margin-left: 10%;
   background: #7CD05D;
 }
